--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,7 +1,7 @@
 services:
   database:
     image: "postgres:16-alpine3.21"
-    environment:
-      POSTGRES_PASSWORD: "vnb"
+    env_file:
+      - ../.env
     ports:
      - "5432:5432"
